# 3bc-lang

./: .clang-format  .codeclimate.yml  .commit-msg  .gitattributes  .gitignore  .npmignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CODE_STANDARD.md  CONTRIBUTING.md  Dockerfile  Doxyfile  Gemfile  INSTRUCTIONS.md  LICENSE.txt  Makefile  PKGBUILD  README.md  _config.yml  download.md  go.mod  install_vm.sh  library.properties  main.c  package.json  run  support.md  tbc.code-workspace  unit.c
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 10_FEATURE_REQUEST.md  20_BUG_REPORT.md  99_COFFEE_TIME.md  BUG_REPORT.md  FEATURE_REQUEST.md
.github/workflows/: automatic-lint.yaml  automatic-publish.yaml  automatic-tests.yaml  codeql-buildscript.sh  compiler-avr-gcc.yaml  compiler-cc65.yaml  compiler-clang.yaml  compiler-gcc.yaml  compiler-xtensa-gcc.yaml  docs.yml
cmake/: cross.cmake  cxx.cmake  flags.cmake  force.cmake  include.cmake  logo.cmake  outputdir.cmake  packages.cmake  size.cmake  target.cmake  tests.cmake  uname.cmake
cmake/find/: cc65.cmake  tcc.cmake  zcc.cmake  zig.cmake
cmake/system/: cc65.cmake  zcc.cmake  zig.cmake
cmake/toolchain/: cc65.cmake  tcc.cmake  zcc-ext.cmake  zcc.cmake  zig.cmake
command/: .rubocop.yml  Gemfile  main.rb
command/lib3bc/: 3bc.rb  bindings.rb  raw.rb
command/tools/: install.rb  list.rb  run.rb
command/utils/: cc.rb  config.rb  git.rb  log.rb  messages.rb  path.rb
docs/: CHANGELOG.md  CNAME  Gemfile  HOTSITE.md  README.md  REFERENCES.md  TUTORIAL-EN-US.md  TUTORIAL.md  _config.yml  changelogs.md  cheatsheet.md  download.md  early.md  err.md  index.html  index.md  manual.md  references.md  roadmap.md  support.md  tutorial-pt-br.md
docs/_data/: examples.yml  main_plataforms.yml
docs/_includes/: btn_download.rhtml  download_list.rhtml  head.html  head.rhtml  header.html  nav.rhtml
docs/_layouts/: default.html  editor.html
docs/_posts/: 2020-12-26-beta.md
docs/assets/: helpers.js  highlights.css  highlights.js  style.css
docs/extra/: advice.md  changelogs.md  early-adopters.md  references.md  roadmap.md  warnings.md
docs/guide/: cheatsheet.md  erros.md  install.md  tutorial-en-us.md  tutorial-en_US.md  tutorial-pt-br.md
docs/site/: 404.html  download.html  manual.html  support.md
examples/: fibonacci.3bc  heloworld.3bc  input_login.3bc  invert.3bc  invert_default.3bc  invert_helper.3bc  invert_text.3bc  loop.3bc  loop_do_while.3bc  math_average.3bc  math_basics.3bc  math_calculator.3bc  math_sortable.3bc  mathematics.3bc  olamundo.3bc  pointers.3bc  procedure.3bc  simple_login.3bc
examples/Arduino/: helloworld.ino
examples/ArduinoBlink/: ArduinoBlink.ino
examples/ArduinoHelloworld/: ArduinoHelloworld.ino
examples/ArduinoInfo/: ArduinoInfo.ino
examples/loops/: where.3bc
main/: lib.c
programs/: cafe.c  hello.c  info.c  interpreter.c  interpreter_6502.c  rom_interpreter_nes.c  tests.c
scripts/: cc_dynamiclib.rb  cc_interpreter.rb  clean_cmake.bat  clean_cmake.sh  clean_docs.bat  clean_docs.sh  clean_git.bat  clean_git.sh  clean_vendor.bat  clean_vendor.sh  commit_message_hook.rb  docs_build.bat  docs_build.sh  docs_serve.bat  docs_serve.sh  filter_doxygen.sh  install_hooks.bat  install_hooks.sh  install_vm.sh  tests_e2e_fast.bat  tests_e2e_fast.sh  tests_e2e_full.bat  tests_e2e_full.sh  tests_sizes.bat  tests_sizes.sh
src/: 3bc.h  3bc_bootstrap.h  3bc_detect.h  3bc_errors.h  3bc_header.h  3bc_interpreter.h  3bc_macros.h  3bc_optional_custom.h  3bc_optional_interpreter.h  3bc_register.h  3bc_support.h  3bc_types.h  cpu_bool.c  cpu_boolean.c  cpu_common.c  cpu_debug.c  cpu_helper.c  cpu_input.c  cpu_jump.c  cpu_math.c  cpu_memory.c  cpu_procedure.c  cpu_sleep.c  cpu_string.c  driver_accumulator.c  driver_bootstrap.c  driver_custom.c  driver_gpio.c  driver_idle.c  driver_interrupt.c  driver_io.c  driver_memory.c  driver_mode.c  driver_power.c  driver_progam.c  driver_program.c  driver_tty.c  ds_container_darray.c  ds_fpga_array.c  ds_hypervisor_darray.c  (+25 more)
src/alu/: alu_0000.h  alu_common_simple.c  alu_common_simple.h  alu_math.c  alu_math.h  alu_none.c  alu_none.h
src/bus/: bus_alu_0000.h  bus_alu_hello.c  bus_alu_hello.h  bus_alu_lang.c  bus_alu_lang.h  bus_cfg_0000.h  bus_cfg_hello.c  bus_cfg_hello.h  bus_cfg_lang.c  bus_cfg_lang.h  bus_cpu.c  bus_cpu.h  bus_cpu_0000.h  bus_cpu_hello.c  bus_cpu_hello.h  bus_cpu_lang.c  bus_cpu_lang.h  bus_mem_0000.h  bus_mem_hello.c  bus_mem_hello.h  bus_mem_lang.c  bus_mem_lang.h  bus_registers.c  bus_registers.h  bus_sys_0000.h  bus_sys_hello.c  bus_sys_hello.h  bus_sys_lang.c  bus_sys_lang.h
src/cast/: cast_itos.c  cast_itos.h  cast_stoi.c  cast_stoi.h
src/cpu/: cpu_boolean.c  cpu_common.c  cpu_common.h  cpu_jump.c  cpu_jump.h  cpu_math.c  cpu_math.h  cpu_memory.c  cpu_memory.h  cpu_procedure.c  cpu_string.c  cpu_string.h
src/detect/: detect_compiler.h  detect_cpu.h  detect_datebuild.h  detect_extra.h  detect_libc.h  detect_opt.h  detect_system.h  detect_unsupported.h  detect_warning.h
src/driver/: driver_accumulator.c  driver_cpu.c  driver_cpu.h  driver_custom.c  driver_error.c  driver_error.h  driver_gc.c  driver_gc.h  driver_gpio.c  driver_idle.c  driver_interrupt.c  driver_interrupt.h  driver_mode.c  driver_power.c  driver_program.c  driver_stack.c  driver_stack.h  driver_tty.c
src/ds/: ds_extern_program.c  ds_prog_array.c  ds_prog_array.h  ds_ram_array.c  ds_ram_array.h
src/i18n/: i18n_0000.c  i18n_0000.h  i18n_en-us.c  i18n_en-us.h  i18n_en-us_error.c  i18n_en-us_help.c  i18n_en-us_info.c  i18n_en.c  i18n_en.h  i18n_no-ne.c  i18n_no-ne.h  i18n_no-ne_cli.c  i18n_no-ne_error.c
src/interpreter/: interpreter_0000.h  interpreter_mock.c  interpreter_parser.c  (+4 more)
tests/: commit_message_hook_test.rb  cpu.test.rb  examples.test.rb  examples.test.ts  extra.test.rb  fails.test.rb  fails.test.ts  fasttest.cpu.rb  fasttest.examples.rb  fasttest.fails.rb  fulltest.commit_message.rb  fulltest.extra.rb  fulltest.fails.rb  fulltest.sleep.rb  fulltest.version.rb  modes.test.ts  version.full.rb
utils/: filter_doxygen.rb
(+158 files in other folders)
