cmake_minimum_required(VERSION 3.0)
include(cmake/include.cmake)
include(cmake/logo.cmake)
include(cmake/target.cmake)
include(cmake/flags.cmake)
include(cmake/outputdir.cmake)
include(cmake/packages.cmake)

project(tbc C)
include(cmake/size.cmake)
include(cmake/tests.cmake)

option(BUILD_HELLO "Build hello" "ON")
if(BUILD_HELLO)
    add_executable("hello" "${CMAKE_SOURCE_DIR}/programs/hello.c")
    target_link_libraries("hello" tbc_alu_none)
    target_link_libraries("hello" tbc_util)
    target_link_libraries("hello" tbc_cpu_hello)
    target_link_libraries("hello" tbc_i18n)
    target_link_libraries("hello" tbc_interpreter_none)
    target_link_libraries("hello" tbc_sys_std)
    target_link_libraries("hello" tbc_driver_no_math)
    target_link_libraries("hello" tbc_array_simple)
    target_link_libraries("hello" tbc_bus_hello)
    tbc_size("hello" "16k")
endif(BUILD_HELLO)

option(BUILD_CAFE "Build Cafe loop" "ON")
if(BUILD_CAFE)
    add_executable("cafe" "${CMAKE_SOURCE_DIR}/programs/cafe.c")
    target_link_libraries("cafe" tbc_alu_none)
    target_link_libraries("cafe" tbc_util)
    target_link_libraries("cafe" tbc_cpu_no_math)
    target_link_libraries("cafe" tbc_i18n)
    target_link_libraries("cafe" tbc_interpreter_none)
    target_link_libraries("cafe" tbc_sys_std)
    target_link_libraries("cafe" tbc_driver_no_math)
    target_link_libraries("cafe" tbc_array_simple)
    target_link_libraries("cafe" tbc_bus_lang)
    tbc_size("cafe" "16k")
endif(BUILD_CAFE)

option(BUILD_INTERPRETER "Build interpreter" "ON")
if(BUILD_INTERPRETER)
    add_executable("3bc" "${CMAKE_SOURCE_DIR}/programs/interpreter.c")
    target_link_libraries("3bc" tbc_alu_std)
    target_link_libraries("3bc" tbc_util)
    target_link_libraries("3bc" tbc_cpu_std)
    target_link_libraries("3bc" tbc_legacy)
    target_link_libraries("3bc" tbc_i18n)
    target_link_libraries("3bc" tbc_interpreter_lang)
    target_link_libraries("3bc" tbc_sys_std)
    target_link_libraries("3bc" tbc_driver_std)
    target_link_libraries("3bc" tbc_array_simple)
    target_link_libraries("3bc" tbc_bus_lang)
    if(NOT MSVC)
    target_link_libraries("3bc" m)
    endif()
    tbc_size("3bc" "32k")
endif(BUILD_INTERPRETER)
