cmake_minimum_required(VERSION 3.0)
include(cmake/logo.cmake)
include(cmake/target.cmake)
include(cmake/flags.cmake)
include(cmake/outputdir.cmake)
include(cmake/packages.cmake)

project(tbc C)
include(cmake/size.cmake)
include(cmake/tests.cmake)
include_directories("${CMAKE_SOURCE_DIR}/src")

option(BUILD_HELLO "Build hello" "ON")
if(BUILD_HELLO)
    add_executable("hello" "${CMAKE_SOURCE_DIR}/programs/hello.c")
    target_link_libraries("hello" tbc_alu_none)
    target_link_libraries("hello" tbc_util)
    target_link_libraries("hello" tbc_cpu_hello)
    target_link_libraries("hello" tbc_i18n)
    target_link_libraries("hello" tbc_sys_std)
    target_link_libraries("hello" tbc_driver_no_math)
    target_link_libraries("hello" tbc_array_simple)
    target_link_libraries("hello" tbc_bus_hello)
    tbc_size("hello" "16k")
endif(BUILD_HELLO)

option(BUILD_CAFE "Build Cafe loop" "OFF")
if(BUILD_CAFE)
    add_executable("cafe" "${CMAKE_SOURCE_DIR}/programs/cafe.c")
    target_link_libraries("cafe" tbc_alu_no_math)
    target_link_libraries("cafe" tbc_util)
    target_link_libraries("cafe" tbc_cpu_no_math)
    target_link_libraries("cafe" tbc_i18n)
    target_link_libraries("cafe" tbc_sys_std)
    target_link_libraries("cafe" tbc_driver_no_math)
    target_link_libraries("cafe" tbc_array_simple)
    target_link_libraries("cafe" tbc_bus_lang)
    tbc_size("cafe" "16k")
endif(BUILD_CAFE)

option(BUILD_CAFE2 "Build Cafe loop" "OFF")
if(BUILD_CAFE2)
    add_executable("cafe2" "${CMAKE_SOURCE_DIR}/programs/interpreter.c")
    target_compile_options("cafe2" PRIVATE "-DVIRTUAL_ARGV={\"3bc\", \"-e\",\"7.0.2,4.0.202,4.0.254,5.0.10,7.0.9,1.0.0\"}")
    target_link_libraries("cafe2" tbc_alu_no_math)
    target_link_libraries("cafe2" tbc_util)
    target_link_libraries("cafe2" tbc_cpu_no_math)
    target_link_libraries("cafe2" tbc_i18n)
    target_link_libraries("cafe2" tbc_sys_std)
    target_link_libraries("cafe2" tbc_driver_no_math)
    target_link_libraries("cafe2" tbc_array_simple)
    target_link_libraries("cafe2" tbc_bus_lang)
    target_link_libraries("cafe2" tbc_lang3bc)
    tbc_size("cafe2" "16k")
endif(BUILD_CAFE2)

option(BUILD_INTERPRETER "Build interpreter" "ON")
if(BUILD_INTERPRETER)
    add_executable("3bc" "${CMAKE_SOURCE_DIR}/programs/interpreter.c")
    target_link_libraries("3bc" tbc_alu_std)
    target_link_libraries("3bc" tbc_util)
    target_link_libraries("3bc" tbc_cpu_std)
    target_link_libraries("3bc" tbc_i18n)
    target_link_libraries("3bc" tbc_sys_std)
    target_link_libraries("3bc" tbc_driver_std)
    target_link_libraries("3bc" tbc_array_simple)
    target_link_libraries("3bc" tbc_bus_lang)
    target_link_libraries("3bc" tbc_lang3bc)
    if(NOT MSVC)
    target_link_libraries("3bc" m)
    endif()
    tbc_size("3bc" "32k")
endif(BUILD_INTERPRETER)

option(BUILD_INFO "Build info" "OFF")
if(BUILD_INFO)
    set(I18N_LANG "en-us" CACHE STRING "")
    add_executable("info" "${CMAKE_SOURCE_DIR}/programs/interpreter.c")
    target_compile_options("info" PRIVATE "-DVIRTUAL_ARGV={\"3bc\", \"-i\"}")
    target_link_libraries("info" tbc_alu_no_math)
    target_link_libraries("info" tbc_util)
    target_link_libraries("info" tbc_cpu_no_math)
    target_link_libraries("info" tbc_i18n)
    target_link_libraries("info" tbc_sys_std)
    target_link_libraries("info" tbc_driver_no_math)
    target_link_libraries("info" tbc_array_simple)
    target_link_libraries("info" tbc_bus_lang)
    target_link_libraries("info" tbc_lang3bc)
    tbc_size("info" "16k")
endif(BUILD_INFO)